CLOSED FIXED 39150
Canvas's getContext() must return null when called with an invalid/unsupported parameter
https://bugs.webkit.org/show_bug.cgi?id=39150
Summary Canvas's getContext() must return null when called with an invalid/unsupporte...
Attachments
Proposed patch (5.34 KB, patch)
2010-05-14 23:24 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2010-05-14 23:24:21 PDT
Created attachment 56142 [details] Proposed patch
Kenneth Rohde Christiansen
Comment 2 2010-05-15 12:15:15 PDT
Comment on attachment 56142 [details] Proposed patch LGTM, but please add the spec link to the ChangeLog
Adam Barth
Comment 3 2010-05-15 17:59:21 PDT
Comment on attachment 56142 [details] Proposed patch Looks like the spec link is already in the WebCore ChangeLog. Did you mean that it should be in the LayoutTests ChangeLog too?
Kenneth Rohde Christiansen
Comment 4 2010-05-15 18:21:54 PDT
I overlooked that, my bad. Having it both places makes sense though. Another option would be to link to it from the test itself.
WebKit Commit Bot
Comment 5 2010-05-16 00:58:58 PDT
Comment on attachment 56142 [details] Proposed patch Clearing flags on attachment: 56142 Committed r59569: <http://trac.webkit.org/changeset/59569>
WebKit Commit Bot
Comment 6 2010-05-16 00:59:04 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 7 2010-05-18 13:52:26 PDT
Revision r59569 cherry-picked into qtwebkit-2.0 with commit 14cc1d210d6f2b951f74a5906640d0db4778e9b7
Note You need to log in before you can comment on or make changes to this bug.