2010-05-16  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        Add a test to check proper return value (null) from invalid canvas getContext() calls.

        https://bugs.webkit.org/show_bug.cgi?id=39150

        * fast/canvas/canvas-getContext-invalid-expected.txt: Added.
        * fast/canvas/canvas-getContext-invalid.html: Added.
        * fast/canvas/script-tests/canvas-getContext-invalid.js: Added.
2010-05-16  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        Canvas's getContext() must return null when called with an invalid/unsupported parameter.
        (HTML5 spec 4.8.11): http://www.whatwg.org/specs/web-apps/current-work/multipage/the-canvas-element.html#dom-canvas-getcontext

        https://bugs.webkit.org/show_bug.cgi?id=39150

        Test: fast/canvas/canvas-getContext-invalid.html

        * bindings/js/JSHTMLCanvasElementCustom.cpp:
        (WebCore::JSHTMLCanvasElement::getContext):
        * bindings/v8/custom/V8HTMLCanvasElementCustom.cpp:
        (WebCore::V8HTMLCanvasElement::getContextCallback):

git-svn-id: svn://svn.chromium.org/blink/trunk@59569 bbb929c8-8fbe-4397-9dbb-9b2b20218538