third_party/WebKit/LayoutTests/fast/canvas/script-tests/canvas-getContext-invalid.js
@@ -1,0 +1,13 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+description("Test that invalid canvas getContext() requests return null.");
+
+canvas = document.createElement('canvas');
+
+shouldBe("canvas.getContext('')", "null");
+shouldBe("canvas.getContext('2d#')", "null");
+shouldBe("canvas.getContext('This is clearly not a valid context name.')", "null");
+shouldBe("canvas.getContext('2d\0')", "null");
+shouldBe("canvas.getContext('2\uFF44')", "null");
+shouldBe("canvas.getContext('2D')", "null");
+
+var successfullyParsed = true;
